--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -115,6 +115,8 @@ enigma_SOURCES = 		\
 	stones.cc 		\
 	stones.hh 		\
 	stones_internal.hh 	\
+	texture.cc 		\
+	texture.hh		\
 	Utf8ToXML.cc		\
 	Utf8ToXML.hh		\
 	util.cc 		\
