--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,6 +17,7 @@ CXXFLAGS = @CXXFLAGS@\
 	-I$(top_builddir)/lib-src/zipios++ \
 	-I$(top_srcdir)/lib-src/lua \
 	-I$(top_srcdir)/lib-src/enigma-core \
+	-I$(top_srcdir)/lib-src/enet/include \
 	-I$(top_srcdir)/lib-src \
 	-I$(top_builddir)/intl @SDL_CFLAGS@
 
@@ -78,6 +79,10 @@ enigma_SOURCES = 		\
 	main.hh			\
 	MessageDescriptor.cc	\
 	MessageDescriptor.hh	\
+	netgame.cc 		\
+	netgame.hh 		\
+	network.cc		\
+	network.hh		\
 	nls.cc 			\
 	nls.hh			\
 	Object.cc 		\
@@ -435,6 +440,7 @@ enigma_LDADD = \
 	@LIBINTL@ \
 	$(top_builddir)/lib-src/enigma-core/libecl.a \
 	$(top_builddir)/lib-src/lua/liblua.a \
+	$(top_builddir)/lib-src/enet/libenet.a \
 	$(top_builddir)/lib-src/oxydlib/liboxyd.a \
 	$(top_builddir)/lib-src/zipios++/src/libzipios.a \
 	-lz \
